--- a/index.css
+++ b/index.css
@@ -33,10 +33,15 @@ a{
 }
 
 .header .logo{
+    margin-left: 3%;
     float: left;
     display: block;
     font-size: 2em;
-    padding: 10px 20px;
+    background-image: url(./mylivesignature.png);
+    background-size: 100% 100%;
+    width: 80px;
+    height: 50px;
+
 }
 
 .header ul li a:hover{
@@ -114,27 +119,6 @@ its height to 240px */
 }
 
 
-@media (min-width:768px){
-    header li{
-        float: left;
-    }
-
-    .header li a{
-        padding: 20px 28px;
-    }
-
-    .header .menu{
-        clear: none;
-        float: right;
-        max-height:none;
-        margin-right:140px;
-    }
-
-    .header .menu-icon{
-        display: none;
-    }
-
-}
 
 .section{
     position:absolute;
@@ -288,46 +272,6 @@ its height to 240px */
 }
 
 
-@media all and (max-width:1265px){
-    .myImage{
-        height:45%;
-        width:55%;
-    }
-}
-
-@media all and (max-width:1265px){
-    .about{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .about-left-container{
-        width:100%;
-        height:100%;
-    }
-
-    .about-right-container{
-        width:100%;
-        height:100%;
-    }
-
-    .image-card{
-        height:90%;
-    }
-
-    .myImage {
-        height: 66%;
-        width: 32%;
-    }
-}
-
-@media all and (max-width:700px){
-    .myImage {
-        height: 75%;
-        width: 55%;
-    }
-}
 
 
 .skills{
@@ -566,38 +510,38 @@ its height to 240px */
     padding-right:20px;
 }
 
-@media all and (max-width: 500px){
-    .bounce{
-        left:43%;
+
+
+
+@media all and (max-width:1200px){
+    
+
+    .about-left-container{
+        width:100%;
+        height:100%;
+        margin-top:10px;
     }
+
+    .about-right-container{
+        width:100%;
+        height:100%;
+        margin-top:10px;
+    }
+/* 
+    .myImage{
+        height: 80%;
+        width: 50%;
+    } */
 }
 
-@media all and (max-width:768px){
-    .skills{
-        height:fit-content;
-    }
-    .description{
-        padding: 0px;
-    }
-  .skills{
-      flex-direction: column-reverse;
-      margin-top:20px;
-  }  
-
-  .skills-left-container{
-      height: 100%;
-      width: 100%
-  }
-
-  .skills-right-container{
-      height:100%;
-      width: 100%
-  }
-
-  
-}
 
 @media all and (max-width:1000px){
+    .about{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     .others{
         flex-direction: column;
         height:100%;
@@ -619,3 +563,77 @@ its height to 240px */
         padding:10px;
     }
 }
+
+
+@media all and (max-width:768px){
+
+    .skills{
+        height:fit-content;
+    }
+    .description{
+        padding: 0px;
+    }
+  .skills{
+      flex-direction: column-reverse;
+      margin-top:20px;
+  }  
+
+  .skills-left-container{
+      height: 100%;
+      width: 100%;
+      margin-top:10px;
+  }
+
+  .skills-right-container{
+      height:100%;
+      width: 100%;
+      margin-top:10px;
+  }
+
+  
+}
+
+@media (max-width:700px){
+    .myImage {
+        height: 75%;
+        width: 55%;
+    }
+
+}
+
+@media all and (min-width:768px){
+    header li{
+        float: left;
+    }
+
+    .header li a{
+        padding: 20px 28px;
+    }
+
+    .header .menu{
+        clear: none;
+        float: right;
+        max-height:none;
+        margin-right:140px;
+    }
+
+    .header .menu-icon{
+        display: none;
+    }
+}
+
+
+
+
+@media all and (max-width: 500px){
+    .bounce{
+        left:43%;
+    }
+}
+
+/* @media all and (max-width:1265px){
+    .myImage{
+        height:45%;
+        width:55%;
+    }
+} */
