--- a/index.css
+++ b/index.css
@@ -271,9 +271,6 @@ its height to 240px */
 
 }
 
-
-
-
 .skills{
     display: flex;
     align-items: center;
@@ -315,6 +312,46 @@ its height to 240px */
     display: flex;
     justify-content: space-between;
 }
+
+.download{
+    height: 180px;
+    background-image: linear-gradient(to right,#00c3ff, #ffff1c);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.alignment{
+    margin-bottom: 15px;
+    font-size: 20px;
+    padding: 0 15px;
+}
+.button{
+    height: 45px;
+    width: 100px;
+    background: #95ec53;
+    border-radius: 12px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+}
+
+.button-size{
+    width: 120px;
+}
+.button:hover {
+    background-color: white;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: black;
+    transform: translateY(-7px);
+  }
+.button-text{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .bar{
     width:100%;
     background-color:#e4efe4d1;
@@ -331,13 +368,6 @@ its height to 240px */
     border-radius:10px;
 }
 
-/* .skill-description{
-    width:80%;
-    padding:20px;
-    opacity:0px;
-    transform: translateY(20px);
-    transition: 0.5s all ease-in;
-} */
 .fill-htmlcss{
     opacity:1;
     width:80%;   
@@ -364,14 +394,65 @@ its height to 240px */
 }
 
 
-.others{
+.contact{
     height:100%;
     display:flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    flex-direction: column;
+}
+
+.message{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height:70%;
+}
+
+.message-icon{
+    font-size:40px;
+    transition: all .3s ease-in;
+    margin-bottom: 15px;
+    color:red;
+}
+
+.common-text{
+    font-size: 35px;
+    margin-bottom: 15px;
+}
+
+.contact-button-alignment{
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
+.other-contacts{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 170px;
+    align-items: center;
+    background-image: linear-gradient(to right,#00c3ff, #ffff1c);
+    height: 30%;
+    flex-direction: column;
+}
+.other-contacts-alignment{
+    display: flex;
+    width: 150px;
+    justify-content: space-around;
+}
 
+.other-contacts-text{
+    margin-top:15px;
+    font-weight: bold;
+}
+
+.heart-color{
+    color:red;
+}
 .handles{
     width: 50%;
     height: 100%;
@@ -388,51 +469,9 @@ its height to 240px */
     transform: translateX(0px);
 }
 
-
-
-
-.others-card{
-    height: 60%;
-    width: 75%;
-    align-items: center;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 
-    0 3px 6px rgba(0,0,0,0.23);
-    display:flex;
-    flex-direction: column;
-}
-
-.card-header{
-    height:30%;
-    font-weight: bold;
-    font-size:20px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-}
-.card-content{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding-bottom:10px;
-}
-
-.social{
-    flex-direction: column;
-}
-
-.social-tag{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 10px;
-}
-
-
 .social-logo{
-    height: 35px;
-    width: 35px;
+    height: 38px;
+    width: 38px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -449,27 +488,7 @@ its height to 240px */
     color: #fff;
 }
 
-.hackerrank{
-    font-weight: bold;
-    font-size: 20px;
-    color: #82C91E
-}
 
-.hackerrank:hover{
-    background-color: #82C91E;
-    color: #fff;
-}
-
-.codechef{
-    font-weight: bold;
-    font-size: 20px;
-    color: #713C1D
-}
-
-.codechef:hover{
-    background-color: #713C1D;
-    color:#fff;
-}
 .instagram{
     color: #e4405f;
 }
@@ -479,15 +498,6 @@ its height to 240px */
     color:#fff
 }
 
-.geeks{
-    font-weight: bold;
-    font-size: 20px;
-    color:#4CB96B;
-}
-.geeks:hover{
-    background-color:#4CB96B;
-    color:#fff;
-}
 .facebook{
     color: #3b5999;
 }
@@ -496,22 +506,6 @@ its height to 240px */
     background-color:#3b5999 ;
     color:#fff;
 }
-.card-left{
-    width:22%;
-    padding-left:20px;
-}
-
-.colon{
-    padding:10px;
-}
-.card-right{
-    width:75%;
-    word-break: break-all;
-    padding-right:20px;
-}
-
-
-
 
 @media all and (max-width:1200px){
     
@@ -527,11 +521,6 @@ its height to 240px */
         height:100%;
         margin-top:10px;
     }
-/* 
-    .myImage{
-        height: 80%;
-        width: 50%;
-    } */
 }
 
 
@@ -589,9 +578,20 @@ its height to 240px */
       width: 100%;
       margin-top:10px;
   }
-
-  
 }
+
+
+@media screen and (max-width: 1000px) and (min-width: 700px) {
+    .card{
+        height:90%;
+        width:35%;
+    }
+
+    .myImage{
+        height: 65%;
+        width: 40%;
+    }
+  }
 
 @media (max-width:700px){
     .myImage {
@@ -631,9 +631,3 @@ its height to 240px */
     }
 }
 
-/* @media all and (max-width:1265px){
-    .myImage{
-        height:45%;
-        width:55%;
-    }
-} */
