--- a/index.css
+++ b/index.css
@@ -137,7 +137,7 @@ its height to 240px */
     position:relative;
 }
 
-.preName{
+.pre-name{
     font-weight: bold;
     letter-spacing: 5px;
     color:#3e64ff;
@@ -159,7 +159,7 @@ its height to 240px */
     justify-content: center;
 }
 
-.roleName{
+.role-name{
     animation: colorChange 4s infinite;
     font-size:30px;
     margin-left:5px;
@@ -202,7 +202,7 @@ its height to 240px */
       }
 }
 
-.downArrow{
+.down-arrow{
     background-color: white;
     border-radius: 20px;
 }
@@ -223,7 +223,7 @@ its height to 240px */
     justify-content: center;
     align-items:center
 }
-.aboutText{
+.about-text{
     font-size:35px;
     font-weight: bold;
 }
@@ -261,7 +261,7 @@ its height to 240px */
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 
     0 3px 6px rgba(0,0,0,0.23);
 }
-.myImage{
+.my-image{
     height: 50%;
     width: 60%;
     border: 1px solid black;
@@ -587,14 +587,14 @@ its height to 240px */
         width:35%;
     }
 
-    .myImage{
+    .my-image{
         height: 65%;
         width: 40%;
     }
   }
 
 @media (max-width:700px){
-    .myImage {
+    .my-image {
         height: 75%;
         width: 55%;
     }
